kubernetes/flask-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: cresgiantoinelucas.azurecr.io/devops/flask-app
        ports:
          - containerPort: 8000
            protocol: TCP
