kubernetes/flask-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
